docs/api/qiskit/0.24/qiskit.visualization.plot_bloch_multivector.md
---
title: plot_bloch_multivector
description: API reference for qiskit.visualization.plot_bloch_multivector
in_page_toc_min_heading_level: 1
python_api_type: function
python_api_name: qiskit.visualization.plot_bloch_multivector
---

<span id="qiskit-visualization-plot-bloch-multivector" />

# qiskit.visualization.plot\_bloch\_multivector

<span id="qiskit.visualization.plot_bloch_multivector" />

`plot_bloch_multivector(state, title='', figsize=None, *, rho=None)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.16/qiskit/visualization/state_visualization.py "view source code")

Plot the Bloch sphere.

Plot a sphere, axes, the Bloch vector, and its projections onto each axis.

**Parameters**

*   **state** ([*Statevector*](qiskit.quantum_info.Statevector "qiskit.quantum_info.Statevector")  *or*[*DensityMatrix*](qiskit.quantum_info.DensityMatrix "qiskit.quantum_info.DensityMatrix") *or ndarray*) – an N-qubit quantum state.
*   **title** (*str*) – a string that represents the plot title
*   **figsize** (*tuple*) – Has no effect, here for compatibility only.

**Returns**

A matplotlib figure instance.

**Return type**

matplotlib.Figure

**Raises**

*   **ImportError** – Requires matplotlib.
*   [**VisualizationError**](qiskit.visualization.VisualizationError "qiskit.visualization.VisualizationError") – if input is not a valid N-qubit state.

**Example**

```python
from qiskit import QuantumCircuit
from qiskit.quantum_info import Statevector
from qiskit.visualization import plot_bloch_multivector
%matplotlib inline

qc = QuantumCircuit(2)
qc.h(0)
qc.cx(0, 1)

state = Statevector.from_instruction(qc)
plot_bloch_multivector(state, title="New Bloch Multivector")
```

![../\_images/qiskit.visualization.plot\_bloch\_multivector\_0\_0.png](/images/api/qiskit/0.24/qiskit.visualization.plot_bloch_multivector_0_0.png) ![../\_images/qiskit.visualization.plot\_bloch\_multivector\_0\_1.png](/images/api/qiskit/0.24/qiskit.visualization.plot_bloch_multivector_0_1.png)

